maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:29: error: ')' expected but '(' found.
def listVoisins(listCoord:List(Int,Int), xMax:Int, yMax:Int, num:Int):List(int,int)= {
                              ^ShortestPathMaze:29: error: '=' expected but ',' found.
def listVoisins(listCoord:List(Int,Int), xMax:Int, yMax:Int, num:Int):List(int,int)= {
                                       ^ShortestPathMaze:88: error: illegal start of simple expression
}
^